[package]
name = "prime"
version = "0.2.6"
edition = "2021"

[dependencies]
num-complex = "0.4.5"
num-bigint =  { version = "0.4.6", features = ["rand"] }
num-prime = { version = "0.4.4", features=["big-int", "big-table"] }
num-iter = "0.1.45"
num-traits = "0.2.19"
rayon = "1.10.0"
clap = { version = "4.5.16", features = ["derive"] }
ctrlc-async = {version = "3.2.2", features = ["termination"]}

[profile.release]
panic = "abort"
opt-level = 3

