[package]
name = "prime"
version = "0.2.7"
edition = "2021"

[dependencies]
num-complex = "0.4.6"
num-bigint =  { version = "0.4.6", features = ["rand"] }
num-prime = { version = "0.4.4", features=["big-int", "big-table"] }
num-iter = "0.1.45"
num-traits = "0.2.19"
rayon = "1.10.0"
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
indicatif = { version = "0.17.8", features = ["rayon"] }

[profile.release]
panic = "abort"
opt-level = 3